# project_ui_and_api_autotests_for_stepik

./: .gitignore  README.md  pyproject.toml  requirements.txt
autotest_stepik_project/api_framework/: stepik.py
autotest_stepik_project/model/: app.py
autotest_stepik_project/model/components/: authorization.py  header_menu.py  learning_sidebar.py  mobile_banner.py
autotest_stepik_project/model/controls/: checkbox.py
autotest_stepik_project/model/pages/: catalog_page.py  course_page.py  courses_active_page.py  main_page.py  profile_page.py  wishlist_page.py
autotest_stepik_project/utils/: attach.py  session.py
autotest_stepik_project/utils/notifications/: commands.txt  config.json
autotest_stepik_project/utils/patching/allure/: attach.py  report.py
autotest_stepik_project/utils/patching/requests/: BaseSession.py
data/: user_data.py
data/schemas/: stepik_api_schemas.py
notifications/: config.json
tests/: conftest.py
tests/tests_api/: test_api.py
tests/tests_web/: test_ui.py
